kdenlive appimage (pour debian trop recent)

--- a/Video/README
+++ b/Video/README
@@ -1,1 +1,3 @@
 Sessions kdenlive (sources https://archive.org/details/ammd-label?and[]=year%3A%222017%22&and[]=creator%3A%22plagiat%22)
+
+Kdenlive 16.12.2 : debian strech repo or https://files.kde.org/kdenlive/release/Kdenlive-16.12.2-x86_64.AppImage
